2014-04-14 Roman
- !!:DAQ.MMS: Global namespace "MMS" using disabled.
    Acquisition errors control and the errors display for parameters is added.
    The data acquisition controller alarms generate is added at connection error.
    Resources allocation is moved full to pthread_mutex_t.
    No activity data, no any variables set, control is added.
    The connection initial data reset is added for restore connection at errors and no responds.
    Reject response process is added for confirmedRequest-PDU.
- DAQ.ModBus: Some code clean up.
- !!:DAQ.OPC_UA: User and password auth data set is added to client part and test program.
    libOPC_UA clean up from OPCVariant object and it removed.


2014-04-10 Roman
- Archive.DBArch: Field's "LEN" of messages table length set to "2" for allow negative (alarms).
- SYS.{TController,TTipDAQ): ID update after new child object create.
- SYS: To user's API of object XMLNodeObj function "childGet( string name, int num = 0 )" is added.
    Mostly warnings clean.
- DAQ.BlockCalc: To blocks' output links optional writing by changes is added. Some code clean up.
- FIX:DAQ.ICP_DAS: Watchdog value set for LP-8x81 is fixed.
- FIX:DAQ.MMS: The correct transport address set at enable fix. COTP DestTSAP is set configurable from the controller object.
    Build fix.
- Transport.{SSL,Sockets}: Default value of KeepAliveTm set to 60 for prevent input connections hang. Some code clean up.
- UI.VCAEngine: Some code clean up.


2014-04-05 Roman
- SYS: ALTLinux RPM-spec depend to postgresql9.1-devel is changed postgresql-devel.
- DB.LibsDB.vcaBase: "anShow" set to inactive mode by default. New element "TextLab" fo digital stats is added.
- !!!!:DAQ.MMS: Self MMS implementation library is added and used for ABB 800, without Sessions implement for now.
    libiec61850 removed.
- DAQ.OPC_UA: Remove transport start at the controller's object start.
- UI.QTCfg: Check and change current page at it rename.