@@ -26,10 +26,12 @@
 
 #include <string>
 #include <vector>
+#include <map>
 
 using std::string;
 using std::vector;
 using std::pair;
+using std::map;
 
 namespace MMS
 {
@@ -66,8 +68,6 @@ enum MMS_ConfServ { Conf_Identify = 0x82, Conf_getNameList = 0xA1, Conf_Identify
 enum MMS_ObjClass { OCL_NmVar = 0x00, OCL_ScattAccess = 0x01, OCL_NmVarLs = 0x02, OCL_Domain = 0x09, OCL_ProgInvoc = 0x10 };
 enum MMS_VarTps	{ VT_Error = 0x80, VT_Array = 0x81, VT_Struct = 0x82, VT_Bool = 0x83, VT_BitString = 0x84, VT_Int = 0x85, VT_UInt = 0x86,
 		  VT_Float = 0x87, VT_OctString = 0x89, VT_VisString = 0x8A, VT_TimeOfDay = 0x8C, VT_BCD = 0x8D, VT_BoolArr = 0x8E };
-enum MMS_RejectReqPDU { RjReq_other = 0, RjReq_unrecognizedService, RjReq_unrecognizedModifier, RjReq_invalidInvokeID, RjReq_invalidArgument,
-			RjReq_invalidModifier, RjReq_maxServOutstandingSxceeded, RjReq_maxRecursionExceeded = 8, RjReq_valueOutOfRange };
 
 //* External functions                        */
 extern int64_t curTime( );
@@ -187,6 +187,9 @@ class Core
 	static void ASN_oS( string &buf, uint8_t tag, const string &vl );
 	static void ASN_oBS( string &buf, uint8_t tag, const string &vl, char unUsBits = 0 );
 	static void ASN_oNmObj( string &buf, uint8_t tag, const string &vl, const string &domain = "" );
+
+	//Attributes
+	map<uint8_t, vector<string> > RejectErrs, ConfirmErrs;
 };
 
 //*************************************************
